# MailMind

./: .gitignore  README.md
backend/: .env.example  .flaskenv  README.md  __init__.py  credentials.json  pyproject.toml  run.py
backend/app/: __init__.py
backend/app/api/: __init__.py  auth.py  base.py
backend/app/config/: __init__.py  config.py  timezone.py
backend/app/db/: database.py  models.py
backend/app/models/: __init__.py  analysis.py  chat.py  email.py  task.py  user.py
backend/app/routes/: __init__.py  ai_routes.py  auth_routes.py  chat_routes.py  email_routes.py  scheduler_routes.py  views.py
backend/app/service/: __init__.py  ai_service.py  auth_service.py  email_analyzer.py  email_sender.py  email_service.py  email_sync.py  gmail.py  gmail_provider.py  scheduler_service.py  service_manager.py
backend/app/service/ai/: __init__.py  ai_service.py  base_ai_service.py  deepseek_service.py
backend/app/service/email/: __init__.py  auth.py  factory.py  gmail.py  interface.py  mailtrap.py  preprocessor.py  sync.py
backend/app/service/email/processors/: __init__.py  analyzer.py  base.py  preprocessor.py
backend/app/service/email/providers/: __init__.py  base.py  gmail.py  mailtrap.py
backend/app/service/email/services/: __init__.py  analysis.py  base.py  gmail.py  sync.py
backend/app/utils/: decorators.py  logger.py  random.py  token.py
backend/templates/: base.html  chat.html  emails.html  index.html
backend/tests/: __init__.py  conftest.py  test_ai_service.py  test_auth.py  test_base.py  test_configuration.py  test_database.py  test_email_auth.py  test_email_preprocessing.py  test_email_preprocessor.py  test_email_processor.py  test_email_sender.py  test_email_service.py  test_email_storage.py  test_email_sync.py  test_gmail_api.py  test_models.py  test_scheduler.py  utils.py
docs/: backend.md  questions.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: layout.tsx  page.tsx
frontend/app/index/: layout.tsx  page.tsx
frontend/app/setting/: layout.tsx  page.tsx
frontend/components/: chat.tsx  icons.tsx  navbar.tsx
frontend/config/: site.ts
