[tool.poetry]
name = "mailmind"
version = "0.1.0"
description = "An intelligent email management system"
authors = ["yee"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
flask = "^3.0.2"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
werkzeug = "^3.0.1"
gunicorn = "22.0.0"
flask-jwt-extended = "^4.6.0"
flask-cors = "^4.0.0"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
flask-sqlalchemy = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
ruff = "^0.2.1"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "run:create_app"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing"
